--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%); /*this is in relation to the element itself*/
   /*this code centers a block element perfectly in the middle*/
+  text-align: center; /*aligns the Discover our tours button centrally because it's an inline element and it's treated as text.*/
 }
 
 .heading-primary {
@@ -63,6 +64,7 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /*fixes the shaking issue, no one really knows why*/
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -117,4 +119,31 @@ body {
     opacity: 1;
     transform: translate(0); /*0 because at the end we want it to look the way it looks now*/
   }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0,0,0,.2); 
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0,0,0,.2); 
+}
+
+
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
 }
