--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,32 @@ COLORS:
 Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
-
+`
 */
 
 /* universal selector, selects all of the elements on the page */
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /*changes the box model so that the borders and padding isn't added to a total width and hight that we specify for the box */
+  box-sizing: inherit; 
+}
+
+html {
+  font-size: 62.5%; /*instead of pixels to enable the user to change the font-size in the browser if they want to*/
 }
 
 /* project-wide font definitions */
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;  
   font-weight: 400;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
+
+  box-sizing: border-box; /*changes the box model so that the borders and padding isn't added to a total width and hight that we specify for the box */
 }
 
 .header {
@@ -42,12 +50,12 @@ body {
 
 .logo-box {
     position: absolute; /* with position absolute the reference point is the parent element that has its position set to relative, so header is the origin from where the top and left start to count*/
-    top: 40px;
-    left: 40px; 
+    top: 4rem;
+    left: 4rem; 
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .text-box {
@@ -64,14 +72,14 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /*fixes the shaking issue, no one really knows why*/
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
 
   animation-name: moveInFromLeft;
   animation-duration: 1s;
@@ -80,9 +88,9 @@ body {
 
 .heading-primary-sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
 
   animation-name: moveInFromRight;
   animation-duration: 1s;
@@ -92,11 +100,11 @@ body {
 @keyframes moveInFromLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100% {
@@ -108,11 +116,11 @@ body {
 @keyframes moveInFromRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -124,7 +132,7 @@ body {
 @keyframes moveInFromBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
@@ -137,21 +145,22 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.2); 
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.2); 
 }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0,0,0,.2); 
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2); 
 }
 
 
@@ -166,7 +175,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
