--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,17 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute; /* with position absolute the reference point is the parent element that has its position set to relative, so header is the origin from where the top and left start to count*/
     top: 4rem;
     left: 4rem; 
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%; /*40% and 50% is in relation to the parent elements*/
   left: 50%;
@@ -75,7 +75,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -86,7 +86,7 @@ body {
   animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -163,9 +163,7 @@ body {
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.2); 
 }
 
-
-
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -183,7 +181,7 @@ body {
   transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -192,7 +190,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInFromBottom .5s ease-out .75s; /*the last value is animation delay*/
   animation-fill-mode: backwards; /*applies the 0% animation styles to the button before the animation starts*/
 }
