--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,111 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-`
-*/
-
 /* universal selector, selects all of the elements on the page */
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; 
-}
+  box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; /*instead of pixels to enable the user to change the font-size in the browser if they want to*/
-}
+  font-size: 62.5%;
+  /*instead of pixels to enable the user to change the font-size in the browser if they want to*/ }
 
 /* project-wide font definitions */
 body {
-  font-family: "Lato", sans-serif;  
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
   padding: 3rem;
-
-  box-sizing: border-box; /*changes the box model so that the borders and padding isn't added to a total width and hight that we specify for the box */
-}
+  box-sizing: border-box;
+  /*changes the box model so that the borders and padding isn't added to a total width and hight that we specify for the box */ }
 
 .header {
-  height: 95vh; /* Relative to 1% of the height of the viewport. Vieport is the browser window size. If the viewport is 50 cm tall, 1vh = 0.5cm. */
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(128, 214, 113, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(../img/hero.jpg);
+  height: 95vh;
+  /* Relative to 1% of the height of the viewport. Vieport is the browser window size. If the viewport is 50 cm tall, 1vh = 0.5cm. */
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
-
   /* clip-path CSS property creates a clipping region that sets what part of an element should be shown. Parts that are inside the region are shown, while those outside are hidden. */
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-}
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
 
 .header__logo-box {
-    position: absolute; /* with position absolute the reference point is the parent element that has its position set to relative, so header is the origin from where the top and left start to count*/
-    top: 4rem;
-    left: 4rem; 
-}
+  position: absolute;
+  /* with position absolute the reference point is the parent element that has its position set to relative, so header is the origin from where the top and left start to count*/
+  top: 4rem;
+  left: 4rem; }
 
 .header__logo {
-    height: 3.5rem;
-}
+  height: 3.5rem; }
 
 .header__text-box {
   position: absolute;
-  top: 40%; /*40% and 50% is in relation to the parent elements*/
+  top: 40%;
+  /*40% and 50% is in relation to the parent elements*/
   left: 50%;
-  transform: translate(-50%, -50%); /*this is in relation to the element itself*/
+  transform: translate(-50%, -50%);
+  /*this is in relation to the element itself*/
   /*this code centers a block element perfectly in the middle*/
-  text-align: center; /*aligns the Discover our tours button centrally because it's an inline element and it's treated as text.*/
-}
+  text-align: center;
+  /*aligns the Discover our tours button centrally because it's an inline element and it's treated as text.*/ }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-
-  backface-visibility: hidden; /*fixes the shaking issue, no one really knows why*/
-  margin-bottom: 6rem;
-}
+  backface-visibility: hidden;
+  /*fixes the shaking issue, no one really knows why*/
+  margin-bottom: 6rem; }
 
 .heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
   letter-spacing: 3.5rem;
-
   animation-name: moveInFromLeft;
   animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
+  animation-timing-function: ease-out; }
 
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1.75rem;
-
   animation-name: moveInFromRight;
   animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
+  animation-timing-function: ease-out; }
 
 @keyframes moveInFromLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem);
-  }
-
+    transform: translateX(-10rem); }
   80% {
-    transform: translateX(1rem);
-  }
-
+    transform: translateX(1rem); }
   100% {
     opacity: 1;
-    transform: translate(0); /*0 because at the end we want it to look the way it looks now*/
-  }
-}
+    transform: translate(0);
+    /*0 because at the end we want it to look the way it looks now*/ } }
 
 @keyframes moveInFromRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem);
-  }
-
+    transform: translateX(10rem); }
   80% {
-    transform: translateX(-1rem);
-  }
-
+    transform: translateX(-1rem); }
   100% {
     opacity: 1;
-    transform: translate(0); /*0 because at the end we want it to look the way it looks now*/
-  }
-}
+    transform: translate(0);
+    /*0 because at the end we want it to look the way it looks now*/ } }
 
 @keyframes moveInFromBottom {
   0% {
     opacity: 0;
-    transform: translateY(3rem);
-  }
-
+    transform: translateY(3rem); }
   100% {
     opacity: 1;
-    transform: translate(0); /*0 because at the end we want it to look the way it looks now*/
-  }
-}
+    transform: translate(0);
+    /*0 because at the end we want it to look the way it looks now*/ } }
 
 .btn:link,
 .btn:visited {
@@ -150,23 +116,19 @@ body {
   border-radius: 10rem;
   transition: all .2s;
   position: relative;
-  font-size: 1.6rem;
-}
+  font-size: 1.6rem; }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.2); 
-}
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2); 
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
   background-color: #fff;
-  color: #777;
-}
+  color: #777; }
 
 .btn::after {
   content: "";
@@ -178,19 +140,17 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all .4s;
-}
+  transition: all .4s; }
 
 .btn--white::after {
-  background-color: #fff;
-}
+  background-color: #fff; }
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
+  opacity: 0; }
 
 .btn--animated {
-  animation: moveInFromBottom .5s ease-out .75s; /*the last value is animation delay*/
-  animation-fill-mode: backwards; /*applies the 0% animation styles to the button before the animation starts*/
-}
+  animation: moveInFromBottom .5s ease-out .75s;
+  /*the last value is animation delay*/
+  animation-fill-mode: backwards;
+  /*applies the 0% animation styles to the button before the animation starts*/ }
