--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black, .1);
 
     }
 
@@ -24,17 +25,20 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
-
-        transform: scale(90);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+       
     }
 
     &__nav {
         height: 100vh;
-        width: 100%;
+        width: 0;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 1500;
+        // visibility: hidden;
+        opacity: 0;
+        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
     }
 
@@ -44,7 +48,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         list-style: none;
-        text-align: center;            
+        text-align: center;  
+        width: 100%;          
 
     }
 
@@ -56,7 +61,7 @@
         &:link,
         &:visited {
             display: inline-block;
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: 300;
             padding: 1rem 2rem;
             color: $color-white;
@@ -78,5 +83,14 @@
             color: $color-primary;
             transform: translateX(1rem);
         }
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(120    );
+    }
+
+    &__checkbox:checked ~ &__nav {
+        opacity: 1;
+        width: 100%;
     }
 }
