Added a media query mixin.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply (DESKTOP FIRST APPROACH)
+1800px+ :       Big desktop
+
+$breakpoint argument choices:
+- phone
+- tab-port (tablet portrait)
+- tab-land (tablet landscape)
+- big-desktop
+
+1em = 16px
+*/
 @keyframes moveInFromLeft {
   0% {
     opacity: 0;
@@ -40,6 +55,15 @@
 html {
   font-size: 62.5%;
   /*instead of pixels to enable the user to change the font-size in the browser if they want to*/ }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 /* project-wide font definitions */
 body {
