--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -27,4 +27,9 @@ html {
 /* project-wide font definitions */
 body {
   box-sizing: border-box; /*changes the box model so that the borders and padding isn't added to a total width and hight that we specify for the box */
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
