--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .3s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-top: 1rem;
@@ -15,6 +19,10 @@
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text; //this will make the backround only visible where text is
         color: transparent;
+
+        @include respond(tab-port) {
+            margin-bottom: 1.5rem;
+        }
     }
 
     &:hover {
