--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -27,6 +27,17 @@
     &__left {
         width: 33.333333%;
         display: table-cell;
+
+        @include respond(tab-land) {
+            vertical-align: middle;
+        }
+
+        @include respond(phone) {
+            width: 100%;
+            display: inline-block;
+            padding-top: 6rem;
+            text-align: center;
+        }
     }
 
     &__right {
@@ -34,11 +45,27 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port) {
+            padding: 3rem 3rem;
+        }
+        
+        @include respond(phone) {
+            width: 100%;
+            display: inline-block;
+            text-align: center;
+        }
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(phone) {
+            width: 44%;
+            height: auto;
+            display: inline;
+        }
     }
 
     &__text {
@@ -57,6 +84,10 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(phone) {
+            text-align: left;
+        }
     }
 
     //Open states
