--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,6 +9,16 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
 
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: skewX(0);
+    }
+
     &__shape {
         width: 15rem;
         height: 15rem;
@@ -21,18 +31,24 @@
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
         overflow: hidden;
+
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &__img {
         height: 100%;
         transform: translateX(-4rem) scale(1.4);
-        transition: all .5s;
-
-        
+        transition: all .5s;  
     }
 
     &__text {
         transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: skewX(0);
+        }
     }
 
     &__caption {
