--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,6 +15,7 @@
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
   @media (min-resolution: 192dpi) and (min-width: 37.5em), //600px
+         (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), //support for Safari
          (min-width: 125em) { //2000px
     background-image: linear-gradient(
       to right bottom,
